# baandb

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/workflows/: build.yml
src/: kv_store.c  kv_store.h  main.c  server.c  server.h
src/global/controller/: global_controller.c  global_controller.h
src/server/: http_request.c  http_request.h  http_response.c  http_response.h  http_server.h  server.c  server.h  server_model.h
src/store/base/: kv_store.c  kv_store.h
src/store/controller/: store_controller.c  store_controller.h
src/thread/: threadpool.c  threadpool.h  threadpool_model.h
